# taiwan-tax-id-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  data_manager.py  main.py  scheduler.py
frontend/: .clasp.json  formula.js  main.js
