[project]
name = "taiwan-tax-id-api"
version = "0.1.0"
description = "This project provides a high-performance API to lookup Taiwan Unified Business Numbers (UBN/統一編號) by business name, with a ready-to-use Google Sheets integration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = ["ruff>=0.15.4"]
